--- a/community_devices.yml
+++ b/community_devices.yml
@@ -13,3 +13,16 @@ samsung_crownlte:
     - adaptation-droidian-exynos9810
     - adaptation-exynos9810-configs
     - qtwayland5
+
+samsung_crownlte-cutie:
+  type: image
+  arch: arm64
+  edition: cutie
+  variant: phone
+  apilevel: 29
+  use_internal_repository: false
+
+  packages:
+    - adaptation-droidian-exynos9810
+    - adaptation-exynos9810-configs
+    - qtwayland5
