--- a/community_devices.yml
+++ b/community_devices.yml
@@ -12,6 +12,12 @@ samsung_crownlte:
   packages:
     - adaptation-droidian-exynos9810
     - adaptation-exynos9810-configs
+    - linux-bootimage-4.9.218-samsung-crownlte
+    - linux-bootimage-samsung-crownlte
+    - linux-headers-4.9.218-samsung-crownlte
+    - linux-headers-samsung-crownlte
+    - linux-image-4.9.218-samsung-crownlte
+    - linux-image-samsung-crownlte
 
 samsung_crownlte-cutie:
   type: image
@@ -24,3 +30,9 @@ samsung_crownlte-cutie:
   packages:
     - adaptation-droidian-exynos9810
     - adaptation-exynos9810-configs
+    - linux-bootimage-4.9.218-samsung-crownlte
+    - linux-bootimage-samsung-crownlte
+    - linux-headers-4.9.218-samsung-crownlte
+    - linux-headers-samsung-crownlte
+    - linux-image-4.9.218-samsung-crownlte
+    - linux-image-samsung-crownlte
