--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,6 @@ name: droidian rootfs-builder
 on:
   workflow_dispatch:
   push:
-  schedule:
-    - cron: "59 23 * * *"
 
 jobs:
   once:
@@ -73,6 +71,14 @@ jobs:
       - name: Start Container
         run: echo CONTAINER_HASH=$(docker run --detach --privileged -v /tmp/buildd-results:/buildd/out -v /dev:/host-dev -v /sys/fs/cgroup:/sys/fs/cgroup -v ${PWD}:/buildd/sources --security-opt seccomp:unconfined quay.io/droidian/rootfs-builder:bookworm-amd64 /sbin/init) >> $GITHUB_ENV
 
+      - name: Add insecure repository options
+        run: |
+          docker exec $CONTAINER_HASH /bin/sh -c '
+            echo "Acquire::AllowInsecureRepositories \"true\";" > /etc/apt/apt.conf.d/99insecure-repos;
+            echo "Acquire::AllowDowngradeToInsecureRepositories \"true\";" >> /etc/apt/apt.conf.d/99insecure-repos;
+            echo "deb [trusted=yes] http://repo.mobian.org trixie main" > /etc/apt/sources.list.d/mobian.list;
+          '
+
       - name: Build rootfs
         run: |
           docker exec $CONTAINER_HASH /bin/sh -c 'cd /buildd/sources; DROIDIAN_VERSION="${{ env.DROIDIAN_VERSION }}" ./generate_device_recipe.py ${{ matrix.config.product }} ${{ matrix.config.arch }} ${{ matrix.config.edition }} ${{ matrix.config.variant }} ${{ matrix.config.apilevel }} && debos --disable-fakemachine generated/droidian.yaml'
@@ -84,6 +90,9 @@ jobs:
           path: out/*
           if-no-files-found: error
           retention-days: 1
+
+# The rest of the workflow remains unchanged
+
 
   prepare:
     runs-on: ubuntu-20.04
